k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: menus-backend
  namespace: apptolast-menus-prod
  labels:
    app: menus-backend
spec:
  selector:
    app: menus-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
